# docs/api.yaml
@@ -17,9 +17,154 @@ components:
       scheme: bearer
       bearerFormat: JWT
 paths:
+  /v0/entities:
+    get:
+      summary: Get Entities
+      tags:
+        - v0
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    twitterId:
+                      type: string
+                    displayName:
+                      type: string
+                    twitterHandle:
+                      type: string
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /v0/subscribe:
+    post:
+      summary: Subscribe to alerts
+      tags:
+        - v0
+      requestBody:
+        description: Subscribe request body
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  format: email
+                entityId:
+                  type: string
+              required:
+                - email
+                - entityId
+      responses:
+        '200':
+          description: Success
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /v0/tweets:
+    get:
+      summary: Get Tweets
+      tags:
+        - v0
+      parameters:
+        - name: entityId
+          in: query
+          description: The ID of the entity to get tweets for
+          required: true
+          schema:
+            type: string
+        - name: from
+          in: query
+          description: The starting date-time for the tweet search
+          required: false
+          schema:
+            type: string
+            format: date-time
+            default: now-1hr
+        - name: to
+          in: query
+          description: The ending date-time for the tweet search
+          required: false
+          schema:
+            type: string
+            format: date-time
+            default: now
+        - name: maxResults
+          in: query
+          description: The maximum number of results to return
+          required: false
+          schema:
+            type: integer
+            format: int32
+            minimum: 5
+            maximum: 100
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  result:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        description: The total number of results.
+                        example: 100
+                      authentic:
+                        type: number
+                        format: float
+                        description: The percentage of authentic results.
+                        example: 92.2
+                      unauthentic:
+                        type: number
+                        format: float
+                        description: The percentage of unauthentic results.
+                        example: 0.8
+                    required:
+                      - total
+                      - authentic
+                      - unauthentic
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /v1/signup:
     post:
       summary: Signup
+      tags:
+        - v1
       requestBody:
         description: Signup request body
         required: true
@@ -61,6 +206,8 @@ paths:
   /v1/auth:
     post:
       summary: Authenticate
+      tags:
+        - v1
       requestBody:
         description: Authenticate request body
         required: true
@@ -104,6 +251,8 @@ paths:
   /v1/entities:
     get:
       summary: Get Entities
+      tags:
+        - v1
       responses:
         '200':
           description: Success
@@ -120,12 +269,8 @@ paths:
                       type: string
                     displayName:
                       type: string
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+                    twitterHandle:
+                      type: string
         '401':
           description: Unauthorized
         '500':
@@ -137,6 +282,8 @@ paths:
   /v1/subscribe:
     get:
       summary: Get Subscriptions
+      tags:
+        - v1
       security:
         - bearerAuth: []
       responses:
@@ -165,6 +312,8 @@ paths:
   /v1/subscribe/{entityId}:
     post:
       summary: Update Subscription
+      tags:
+        - v1
       security:
         - bearerAuth: []
       parameters:
@@ -199,6 +348,8 @@ paths:
   /v1/tweets:
     get:
       summary: Get Tweets
+      tags:
+        - v1
       security:
         - bearerAuth: []
       parameters:
@@ -211,21 +362,23 @@ paths:
         - name: from
           in: query
           description: The starting date-time for the tweet search
-          required: true
+          required: false
           schema:
             type: string
             format: date-time
+            default: now-1hr
         - name: to
           in: query
           description: The ending date-time for the tweet search
-          required: true
+          required: false
           schema:
             type: string
             format: date-time
+            default: now
         - name: maxResults
           in: query
           description: The maximum number of results to return
-          required: true
+          required: false
           schema:
             type: integer
             format: int32
