# pkg/api/twitter.go
@@ -6,7 +6,7 @@ type GetTweetsRequest struct {
 	EntityID   string    `json:"entityId"`
 	From       time.Time `json:"from"`
 	To         time.Time `json:"to"`
-	MaxResults int       `json:"maxResults" validate:"gte=5,lte=100"`
+	MaxResults int       `json:"maxResults"`
 }
 
 type GetTweetsResponse struct {
